--- a/CHI_2024_Spatial_Audio_Dev_App/app/src/main/res/values/strings.xml
+++ b/CHI_2024_Spatial_Audio_Dev_App/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="Summer2023UserStudy">SLU_multimodal_touch.Graphs</string>
+    <string name="CHI_2024_Spatial_Audio_Dev_App">SLU_multimodal_touch.Graphs</string>
 </resources>
